fix video write (use imageio instead of ffmpeg)

--- a/multiple_cell.ipynb
+++ b/multiple_cell.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "UKyqWKjCHBhX"
       },
@@ -65,10 +65,12 @@
         "from IPython.display import Image, HTML, clear_output\n",
         "import tqdm\n",
         "\n",
-        "import os\n",
-        "os.environ['FFMPEG_BINARY'] = 'ffmpeg'\n",
+        "\n",
+        "# import os\n",
+        "# os.environ['FFMPEG_BINARY'] = 'ffmpeg'\n",
         "import moviepy.editor as mvp\n",
-        "from moviepy.video.io.ffmpeg_writer import FFMPEG_VideoWriter\n",
+        "import imageio\n",
+        "# from moviepy.video.io.ffmpeg_writer import FFMPEG_VideoWriter\n",
         "clear_output()\n",
         "\n",
         "def np2pil(a):\n",
@@ -130,13 +132,19 @@
         "  def add(self, img):\n",
         "    img = np.asarray(img)\n",
         "    if self.writer is None:\n",
-        "      h, w = img.shape[:2]\n",
-        "      self.writer = FFMPEG_VideoWriter(size=(w, h), **self.params)\n",
+        "      # h, w = img.shape[:2]\n",
+        "      # self.writer = FFMPEG_VideoWriter(size=(w, h), **self.params)\n",
+        "\n",
+        "      # Create the video writer with imageio\n",
+        "      self.writer = imageio.get_writer(self.params['filename'], fps=self.params['fps'])\n",
+        "\n",
         "    if img.dtype in [np.float32, np.float64]:\n",
         "      img = np.uint8(img.clip(0, 1)*255)\n",
         "    if len(img.shape) == 2:\n",
         "      img = np.repeat(img[..., None], 3, -1)\n",
-        "    self.writer.write_frame(img)\n",
+        "    # self.writer.write_frame(img)\n",
+        "    self.writer.append_data(img)\n",
+        "    \n",
         "\n",
         "  def close(self):\n",
         "    if self.writer:\n",
@@ -579,7 +587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -625,7 +633,7 @@
         "                  y=np.repeat(padded_img_1[None, ...], POOL_SIZE, 0),\n",
         "                  z=np.repeat(0, POOL_SIZE,0))\n",
         "\n",
-        "!mkdir -p train_log && rm -f train_log/*"
+        "# !mkdir -p train_log && rm -f train_log/*"
       ]
     },
     {
