Add padding method to separate divided cells from each others

--- a/multiple_cell.ipynb
+++ b/multiple_cell.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "id": "UKyqWKjCHBhX"
    },
@@ -177,12 +177,41 @@
     "  return img\n",
     "\n",
     "def display_video(video_path):\n",
-    "    video_tag = f\"\"\"\n",
-    "    <video width=\"640\" height=\"360\" controls>\n",
-    "        <source src=\"{video_path}\" type=\"video/mp4\">\n",
-    "    </video>\n",
-    "    \"\"\"\n",
-    "    return HTML(video_tag)\n",
+    "  video_tag = f\"\"\"\n",
+    "  <video width=\"640\" height=\"360\" controls>\n",
+    "      <source src=\"{video_path}\" type=\"video/mp4\">\n",
+    "  </video>\n",
+    "  \"\"\"\n",
+    "  return HTML(video_tag)\n",
+    "\n",
+    "def pad_img(img2, gap_width=30, desired_h=90, desired_w=90, pad_value=255):\n",
+    "  h, w, c = img2.shape\n",
+    "\n",
+    "  # Split into left and right halves\n",
+    "  left_half = img2[:, :w//2, :]\n",
+    "  right_half = img2[:, w//2:, :]\n",
+    "\n",
+    "  # Create horizontal white gap\n",
+    "  padding_gap = tf.ones([h, gap_width, c], dtype=img2.dtype) * pad_value\n",
+    "\n",
+    "  # Concatenate halves with gap\n",
+    "  img_with_gap = tf.concat([left_half, padding_gap, right_half], axis=1)\n",
+    "\n",
+    "  # Pad to desired size\n",
+    "  ph, pw, _ = img_with_gap.shape\n",
+    "  pad_top = (desired_h - ph) // 2\n",
+    "  pad_bottom = desired_h - ph - pad_top\n",
+    "  pad_left = (desired_w - pw) // 2\n",
+    "  pad_right = desired_w - pw - pad_left\n",
+    "\n",
+    "  paddings = [\n",
+    "      [pad_top, pad_bottom],\n",
+    "      [pad_left, pad_right],\n",
+    "      [0, 0]\n",
+    "  ]\n",
+    "\n",
+    "  padded_img = tf.pad(img_with_gap, paddings, constant_values=pad_value)\n",
+    "  return padded_img\n",
     "\n",
     "class VideoWriter:\n",
     "  def __init__(self, filename, fps=30.0, **kw):\n",
