Fix padding image function to pad with transparent pixels instead of white pixels

--- a/multiple_cell.ipynb
+++ b/multiple_cell.ipynb
@@ -184,20 +184,20 @@
     "  \"\"\"\n",
     "  return HTML(video_tag)\n",
     "\n",
-    "def pad_img(img2, gap_width=30, desired_h=90, desired_w=90, pad_value=255):\n",
-    "  h, w, c = img2.shape\n",
+    "def pad_img(img, gap_width=30, desired_h=90, desired_w=90):\n",
+    "  h, w, c = img.shape\n",
     "\n",
-    "  # Split into left and right halves\n",
-    "  left_half = img2[:, :w//2, :]\n",
-    "  right_half = img2[:, w//2:, :]\n",
+    "  # Split image into left and right halves\n",
+    "  left_half = img[:, :w//2, :]\n",
+    "  right_half = img[:, w//2:, :]\n",
     "\n",
-    "  # Create horizontal white gap\n",
-    "  padding_gap = tf.ones([h, gap_width, c], dtype=img2.dtype) * pad_value\n",
+    "  # Create transparent horizontal gap: zeros in all channels including alpha\n",
+    "  padding_gap = tf.zeros([h, gap_width, c], dtype=img.dtype)\n",
     "\n",
-    "  # Concatenate halves with gap\n",
+    "  # Concatenate halves with transparent gap\n",
     "  img_with_gap = tf.concat([left_half, padding_gap, right_half], axis=1)\n",
     "\n",
-    "  # Pad to desired size\n",
+    "  # Calculate padding to get desired size\n",
     "  ph, pw, _ = img_with_gap.shape\n",
     "  pad_top = (desired_h - ph) // 2\n",
     "  pad_bottom = desired_h - ph - pad_top\n",
@@ -207,10 +207,12 @@
     "  paddings = [\n",
     "      [pad_top, pad_bottom],\n",
     "      [pad_left, pad_right],\n",
-    "      [0, 0]\n",
+    "      [0, 0]  # no padding on channels\n",
     "  ]\n",
     "\n",
-    "  padded_img = tf.pad(img_with_gap, paddings, constant_values=pad_value)\n",
+    "  # Pad with transparent pixels (zeros for RGBA)\n",
+    "  padded_img = tf.pad(img_with_gap, paddings, constant_values=0)\n",
+    "\n",
     "  return padded_img\n",
     "\n",
     "class VideoWriter:\n",
